Fix z-index of login

--- a/app/assets/stylesheets/styles/globals.scss
+++ b/app/assets/stylesheets/styles/globals.scss
@@ -45,7 +45,7 @@ h4 {
   margin-top:20px;
 }
 
-.splash {
+#splash-copy-area {
   z-index: 1;
 }
 
